<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="add">add</string>
	<string name="add_additional_info">Add additional info</string>
	<string name="add_due_date">Add due date</string>
	<string name="add_subtask">Add subtask</string>
	<string name="add_task">Add Task</string>
	<string name="additional_info">Additional info</string>
	<string name="app_name">Task List</string>
	<string name="cancel" tools:ignore="ButtonCase">cancel</string>
	<string name="change">Change</string>
	<string name="complete">complete</string>
	<string name="complete_task">Complete task</string>
	<string name="completed">completed</string>
	<string name="completed_tasks">%1$s completed tasks</string>
	<string name="completing_info">Completing %1$s %2$s</string>
	<string name="create">Create</string>
	<string name="create_task_list">Create Task list</string>
	<string name="deleted">Deleted</string>
	<string name="deleted_small">deleted</string>
	<string name="connection_error">Connection error</string>
	<string name="date_type">dd MMMM, yyyy</string>
	<string name="delete_task">Delete task</string>
	<string name="delete_task_list">Delete task list</string>
	<string name="deleting_info">Deleting %1$s</string>
	<string name="deleting_list_info">Deleting %1$s %2$s</string>
	<string name="edit_task">Edit task</string>
	<string name="edit_task_list">Edit task list</string>
	<string name="failed">failed</string>
	<string name="hide">Hide</string>
	<string name="incomplete_task">Incomplete task</string>
	<string name="new_task">New Task</string>
	<string name="new_task_list">New Task list</string>
	<string name="new_task_list_name">New Task list name</string>
	<string name="new_task_name">New Task name</string>
	<string name="request_key">requestKey</string>
	<string name="request_value">id</string>
	<string name="restoring_info">Restoring %1$s</string>
	<string name="secret">5GR5Wg2iMzQmvSGaEI66DBoX</string>
	<string name="show">Show</string>
	<string name="sort_by_date_to">Sort by date to %1$s</string>
	<string name="sort_tasks">Sort tasks</string>
	<string name="select_date">Select date</string>
	<string name="set_date">Set date</string>
	<string name="sign_in_with_google">Sign In with Google</string>
	<string name="string_button_create_list">Create new Task list</string>
	<string name="string_expand_button">Expand Button</string>
	<string name="subtask">Subtasks</string>
	<string name="task_list">Task list</string>
	<string name="show__tasks">Show %1$s tasks</string>
	<string name="assigned">assigned</string>
	<string name="in_my_order">In my order</string>
	<string name="date_to_complete">date to complete</string>
	<string name="date_to_add">date to add</string>
	<string name="my_order">my order</string>
	<string name="sort_by">Sort by</string>
	<string name="sort_in_my_order">Sort in my order</string>
	<string name="snacbar_sort_change">Can\'t change order of tasks with this sorting settings</string>
	<string name="mix_warnig">You should mix only uncompleted tasks</string>
	<string name="mix_decision">Hide completed tasks</string>
</resources>