<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>

		<variable
			name="viewModel"
			type="com.example.tasklist.viewModel.CreateTaskViewModel" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/textInputEditText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="8sp"
			android:hint="@string/new_task"
			android:text="@={viewModel.baseName}"
			app:layout_constraintTop_toTopOf="parent" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/materialButton"
			isVisible="@{!viewModel.isClicked}"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="8sp"
			android:onClick="@{viewModel.createBaseClickListener}"
			android:text="@string/create"
			android:textAllCaps="false"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

		<com.google.android.material.progressindicator.LinearProgressIndicator
			android:id="@+id/linearProgressIndicator"
			isVisible="@{viewModel.isClicked}"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:indeterminate="true"
			app:layout_constraintBottom_toBottomOf="parent" />

		<ImageButton
			android:id="@+id/picker"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8sp"
			android:background="?selectableItemBackgroundBorderless"
			android:contentDescription="@string/set_date"
			android:clickable="@{!viewModel.isClicked}"
			android:onClick="@{viewModel.setDateClickListener}"
			android:src="@drawable/ic_baseline_today_24"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

		<com.google.android.material.chip.Chip
			android:id="@+id/chip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="8sp"
			app:closeIconEnabled="@{!viewModel.isClicked}"
			isDue="@{viewModel.dueDate}"
			android:clickable="@{!viewModel.isClicked}"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toEndOf="@+id/picker"
			app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>