<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

		<variable
			name="viewModel"
			type="com.example.tasklist.viewModel.taskList.SortTaskViewModel" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/constraintLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			android:background="?selectableItemBackground"
			android:clickable="true"
			android:focusable="true"
			android:onClick="@{viewModel.completedTaskClickListener}"
			app:layout_constraintTop_toTopOf="parent">

			<ImageView
				android:id="@+id/imageView2"
				android:layout_width="32dp"
				android:layout_height="32dp"
				android:layout_marginStart="32dp"
				android:src="@drawable/ic_baseline_done_24_multicolor"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:ignore="ContentDescription" />

			<TextView
				android:id="@+id/completedTask"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="24dp"
				android:textAppearance="?textAppearanceBody1"
				android:textSize="16sp"
				app:layout_constraintBottom_toBottomOf="@+id/imageView2"
				app:layout_constraintStart_toEndOf="@+id/imageView2"
				app:layout_constraintTop_toTopOf="@+id/imageView2" />

		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/constraintLayout2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

			<TextView
				android:id="@+id/sort_tasks"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="32dp"
				android:text="@string/sort_by"
				android:textAppearance="?textAppearanceBody1"
				android:textSize="16sp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<RadioGroup
				android:id="@+id/sort_methodes"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="32dp"
				android:checkedButton="@{viewModel.setting.second}"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/sort_tasks">

				<com.google.android.material.radiobutton.MaterialRadioButton
					android:id="@+id/date_to_complete"
					onClick="@{viewModel.onRadioButtonChoose}"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/date_to_complete" />

				<com.google.android.material.radiobutton.MaterialRadioButton
					android:id="@+id/date_to_add"
					onClick="@{viewModel.onRadioButtonChoose}"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/date_to_add" />

				<com.google.android.material.radiobutton.MaterialRadioButton
					android:id="@+id/my_order"
					onClick="@{viewModel.onRadioButtonChoose}"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/my_order" />
			</RadioGroup>
		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			android:layout_marginBottom="32dp"
			android:background="?selectableItemBackground"
			android:clickable="true"
			android:focusable="true"
			android:onClick="@{viewModel.deletedTaskClickListener}"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

			<ImageView
				android:id="@+id/imageView4"
				android:layout_width="32dp"
				android:layout_height="32dp"
				android:layout_marginStart="32dp"
				android:src="@drawable/ic_baseline_delete_outline_24_multicolor"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				tools:ignore="ContentDescription" />

			<TextView
				android:id="@+id/deleted_tasks"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="24dp"
				android:textAppearance="?textAppearanceBody1"
				android:textSize="16sp"
				app:layout_constraintBottom_toBottomOf="@+id/imageView4"
				app:layout_constraintStart_toEndOf="@+id/imageView4"
				app:layout_constraintTop_toTopOf="@+id/imageView4" />
		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
